--- a/master.css
+++ b/master.css
@@ -27,12 +27,12 @@ html {
 
 @font-face {
 	font-family: 'roboto_slab';
-	src: url('../type/RobotoSlab-Light.ttf');
+	src: url('RobotoSlab-Light.ttf');
 }
 
 @font-face {
 	font-family: 'roboto_bold';
-	src: url('../type/RobotoSlab-Regular.ttf');
+	src: url('RobotoSlab-Regular.ttf');
 }
 
 h1 {
